# PhysX50

.github/workflows/: dockerci_windows.yml
Actions/: runner_nvcc.ps1  vc16win64-cpu-only.xml  vc16win64-gpu.xml  workflow_windows11_24H2.ps1
Examples/Simplest/: CMakeLists.txt  RUNNER.ps1  simplest.cpp
Examples/SnippetHelloWorld/: CMakeLists.txt  ClassicMain.cpp  RUNNER.ps1  SnippetHelloWorld.cpp  SnippetHelloWorldRender.cpp  SnippetPVD.h  SnippetPrint.h
Examples/Snippets/Simplest/: CMakeLists.txt  RUNNER.ps1  simplest.cpp
Examples/Snippets/SnippetHelloWorld/: CMakeLists.txt  RUNNER.ps1  SnippetHelloWorld.cpp
Examples/Swing/: README.md
Examples/Swing/CsPhysX/: CMakeLists.txt  RUNNER.ps1
Examples/Swing/CsPhysX/Sources/: runme.cs  spicytech.cpp  spicytech.hpp
Examples/Swing/Test1a1/: CMakeLists.txt  RUNNER.ps1
Examples/Swing/Test1b1/: CMakeLists.txt  RUNNER.ps1
Examples/Swing/Test2a1/Sources/: example.cpp  runme.cs
Examples/Unity/: README.md
Examples/Unity/PluggingCreatorCPP/: CMakeLists.txt  RUNNER.ps1
Examples/Unity/PluggingCreatorCUDA/Sources/: runme.cs  spicytech.cpp  spicytech.hpp
Examples/Unity/PluggingCreatorPhysX56/: CMakeLists.txt
Examples/Unity/PluggingCreatorPhysX56/Sources/: runme.cs  spicyphysics.hpp
Examples/Unity/PluggingDeformableVolumeSkinning/: RUNNER.ps1
Examples/Unity/PluggingDeformableVolumeSkinning/Sources/: runme.cs  spicyphysics.hpp
Examples/Unity/PluggingHelloWorld/: RUNNER.ps1
Examples/Unity/PluggingHelloWorld/Sources/: configuration.i  spicytech.cpp
Examples/Unity/PluggingSnippetHelloWorld/Sources/: runme.cs
Examples/Unity/PluggingSpicyX/: RUNNER.ps1  SpicyXPlugging.cs  VertexVisualizer.cs
Examples/Unity/PluggingSpicyX/OnGoing/Sources/: SnippetTriangleMeshCreate.cpp  configuration.i  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/OnGoing/Sources/JsPhysX/: triangle_mesh_create.hpp
Examples/Unity/PluggingSpicyX/OnGoing_2025June04/: RUNNER.ps1
Examples/Unity/PluggingSpicyX/OnGoing_2025June04/Sources/: SnippetDeformableVolumeSkinning.h  _volumeSkinningRender.cpp_  runme.cs  volumeRender.hpp
Examples/Unity/PluggingSpicyX/OnGoing_2025June04/Sources/Unity/: SpicyXPlugging.cs  VertexVisualizer.cs
Examples/Unity/PluggingSpicyX/OnGoing_2025June05/Sources/: configuration.i
Examples/Unity/PluggingSpicyX/OnGoing_2025June05/Sources/JsPhysX/: convex_mesh_create.hpp
Examples/Unity/PluggingSpicyX/OnGoing_2025June05/Sources/Unity/: SpicyXPlugging.cs
Examples/Unity/PluggingSpicyX/Ongoing/2025June06/Sources/: runme.cs  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June06/Sources/Unity/: SpicyXPlugging.cs
Examples/Unity/PluggingSpicyX/Ongoing/2025June07/Sources/: spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June07/Sources/Unity/: SpicyXPlugging.cs
Examples/Unity/PluggingSpicyX/Ongoing/2025June09/: RUNNER.ps1
Examples/Unity/PluggingSpicyX/Ongoing/2025June09/Sources/: Logger.hpp  RigidBodyKinematic.hpp  configuration.i  runme.cs  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June09/Sources/Unity/: SpicyXPlugging.cs
Examples/Unity/PluggingSpicyX/Ongoing/2025June10/Sources/: CMakeLists.txt  RigidBodyKinematic.hpp  runme.cs  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June11/: RUNNER.ps1
Examples/Unity/PluggingSpicyX/Ongoing/2025June11/Sources/: RigidBodyKinematic.hpp  runme.cs  spicyAttachment.cpp  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June11/Sources/JsPhysX/: load_file.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June12/: RUNNER.ps1
Examples/Unity/PluggingSpicyX/Ongoing/2025June12/Sources/: Logger.hpp  RigidBodyKinematic.hpp  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/2025June13/Sources/: RigidBodyKinematic.hpp  runme.cs  spicyDeformable.hpp  volumeSkinning.h
Examples/Unity/PluggingSpicyX/Ongoing/2025June15/: RUNNER.ps1
Examples/Unity/PluggingSpicyX/Ongoing/2025June15/Sources/: Attachment.hpp  RigidBodyKinematic.hpp  SnippetDeformableVolumeSkinning.h  configuration.i  runme.cs  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Ongoing/_2025June04/Sources/: _spicyphysics.hpp_  spicytech.cpp
Examples/Unity/PluggingSpicyX/Ongoing/_2025June05/Sources/: runme.cs  spicyDeformable.hpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Sources/: CMakeLists.txt  SwigTest.cs  configuration.i  runme.cs  spicyDeformable.hpp  spicyphysics.hpp  spicytech.cpp  spicytech.hpp
Examples/Unity/PluggingSpicyX/Sources/Unity/: SpicyXPlugging.cs
Examples/Unity/PluggingSpicyX/Unity/: SpicyXPlugging.cs
Examples/Unity/PlugingCreator/: CMakeLists.txt  RUNNER.ps1
Examples/Unity/PlugingCreator/PlugingCreatorCUDA/: CMakeLists.txt
Examples/Unity/PlugingCreatorCPP/Sources/: example.hpp  example.i  runme.cs
Examples/Unity/PlugingCreatorCUDA/: CMakeLists.txt  RUNNER.ps1
Examples/Unity/PlugingCreatorCUDA/Sources/: SwigTest.cs  configuration.i
Examples/Unity/PlugingCreatorPhysX56/: CMakeLists.txt
Examples/Unity/PlugingCreatorPhysX56/Sources/: SwigTest.cs  configuration.i  runme.cs  spicyphysics.hpp  spicytech.cpp  spicytech.hpp
Examples/Unity/PlugingSnippetHelloWorld/: CMakeLists.txt
Examples/Unity/PlugingSnippetHelloWorld/Sources/: SwigTest.cs  spicyphysics.hpp  spicytech.hpp
Examples/Unity/WrapperStructure/Assets/Plugins/SpicyTech/: SwigTest.cs  example.cs  examplePINVOKE.cs
Examples/snippets/SpicyTech/: RUNNER.ps1  SnippetDeformableVolumeSkinning.h  test1.cpp  test3a1.cpp
Examples/snippets/SpicyTech/DeformableVolumeAttachment/: CMakeLists.txt
Examples/snippets/SpicyTech/DeformableVolumeKinematic/: MeshGenerator.h  SnippetDeformableVolumeKinematic.h  SnippetDeformableVolumeKinematicRender.cpp  SnippetImmUtils.h  SnippetUtils.cpp  SnippetUtils.h  test2a1.cpp
Examples/snippets/SpicyTech/DeformableVolumeSkinning/: SnippetDeformableVolumeSkinning.h  SnippetDeformableVolumeSkinningRender.cpp  SnippetImmUtils.cpp  test3a1.cpp
(+11 files in other folders)
